--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
     "mongojs": "^2.4.0",
     "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
