--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@angular/router": "^4.1.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.25",
     "angular2-google-maps": "^0.17.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
     "bootstrap": "^4.0.0-alpha.6",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
-    "express-session": "^1.15.2",
+    "express-session": "^1.15.3",
     "mongojs": "^2.4.0",
     "mongoose": "^4.9.6",
     "morgan": "^1.8.1",
